add map and profile_page

--- a/Reno.MVC/Views/Shared/_Layout.cshtml
+++ b/Reno.MVC/Views/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
     <link href="~/css/animate.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
     
-    @*
-    
-    
-    <link href="~/css/plugins/select2/select2.min.css" rel="stylesheet" />
-    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet" />
-    <!--Add Style for Checkbox and radio (ICheck plugin) -->
+	<link href="~/lib/datatables/css/datatables.bootstrap4.css" rel="stylesheet" />
+
+	<link href="~/lib/virtual-select/css/virtual-select.min.css" rel="stylesheet" />
+
+    @*<link href="~/css/plugins/select2/select2.min.css" rel="stylesheet" />
+    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet" />*@
+    @*<!--Add Style for Checkbox and radio (ICheck plugin) -->
     <link href="~/css/plugins/iCheck/custom.css" rel="stylesheet" />
     <!--Add Style Foe Date  (DatePicker plugin)-->
     <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet" />
@@ -41,8 +41,10 @@
             -moz-appearance: textfield;
         }
     </style>
-    
-    @RenderSection("styles", required: false)*@
+    *@
+
+    <link href="~/css/site.css" rel="stylesheet" />
+    @RenderSection("styles", required: false)
     <script src="~/lib/jquery/dist/jquery.js"></script>
     
 
@@ -116,9 +118,12 @@
     @*<script src="~/js/plugins/pace/pace.min.js"></script>*@
     <script src="~/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
     <script src="~/js/app/inspinia.js"></script>
+
+	<script src="~/lib/virtual-select/js/virtual-select.min.js"></script>
+
     @*<script src="~/js/plugins/select2/select2.full.min.js"></script>
-    <script src="~/js/plugins/dataTables/datatables.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/js/plugins/dataTables/datatables.min.js"></script>*@
+    @*<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/js/plugins/iCheck/icheck.min.js"></script>
     <script src="~/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -195,7 +200,53 @@
                 }
             });
         }
+    </script>*@
+
+    <script>
+        $('document').ready(() => {
+            VirtualSelect.init({
+                ele: '.multiple-select',
+                dropboxWrapper: 'self',
+                optionsCount: 5,
+
+                // Text to show near select all checkbox when search is disabled
+                selectAllText: 'Select all',
+                // Text to use when displaying no.of values selected text (i.e. 3 options selected)
+                optionsSelectedText: 'options selected',
+                // Text to use when displaying all values selected text (i.e. All (10))
+                allOptionsSelectedText: 'All',
+
+
+                // Show each selected values as tags with remove icon
+                showValueAsTags: true,
+                // Maximum no.of values to show in the tooltip for multi-select
+                noOfDisplayValues: 3,
+
+
+                // Custom width
+                dropboxWidth: "100%",
+
+                // Scroll selected option to viewport on dropbox open
+                focusSelectedOptionOnOpen: true,
+
+                // show dropbox as popup on small screen like mobile
+                showDropboxAsPopup: true,
+                // maximum screen width that allowed to show dropbox as popup
+                popupDropboxBreakpoint: '576px',
+                // left, center, or right
+                popupPosition: 'center',
+
+
+                // hide value tooltip if all options selected
+                hideValueTooltipOnSelectAll: true,
+
+                // Maximum width
+                maxWidth: '100%'
+
+            });
+        });
     </script>
-    @RenderSection("Scripts", required: false)*@
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
