--- a/Reno.MVC/Views/Reports/_PartialNavTabsIndex.cshtml
+++ b/Reno.MVC/Views/Reports/_PartialNavTabsIndex.cshtml
@@ -1,8 +1,14 @@
-﻿<!--Dialysis Session Details Tab Index-->
+﻿@model ReportIndexVM
+
+@{
+    var label_class = Model.ViewMode == "Create" ? "label-danger fa fa-window-close" : "label-primary fa fa-check";
+}
+
+<!--Dialysis Session Details Tab Index-->
 <li class="">
     <a data-toggle="tab" href="#tab-1">
         <div class="titleNav">
-            <i style="float:left" class="label label-danger fa fa-window-close">
+            <i style="float:left" class="label @label_class">
                 <lable class="control-label" style="font-size: 13px;font-weight:bolder;"></lable>
             </i>
             Dialysis Session Details
@@ -16,7 +22,7 @@
 <li class="">
     <a data-toggle="tab" href="#tab-2">
         <div class="titleNav">
-            <i style="float:left" class="label label-danger fa fa-window-close">
+            <i style="float:left" class="label label-primary fa fa-check">
                 <lable class="control-label" style="font-size: 13px;font-weight:bolder;"></lable>
             </i>
             Patient Health Status
@@ -30,7 +36,7 @@
 <li class="">
     <a data-toggle="tab" href="#tab-3">
         <div class="titleNav">
-            <i style="float:left" class="label label-warning fa fa-warning">
+            <i style="float:left" class="label @label_class">
                 <lable class="control-label" style="font-size: 13px;font-weight:bolder;"></lable>
             </i>
             Vital Signs & Physical Assessment
@@ -44,7 +50,7 @@
 <li class="">
     <a data-toggle="tab" href="#tab-4">
         <div class="titleNav">
-            <i style="float:left" class="label label-primary fa fa-check">
+            <i style="float:left" class="label @label_class">
                 <lable class="control-label" style="font-size: 13px;font-weight:bolder;"></lable>
             </i>
             Dialysis Treatment Outcomes
@@ -58,7 +64,7 @@
 <li class="">
     <a data-toggle="tab" href="#tab-5">
         <div class="titleNav">
-            <i style="float:left" class="label label-primary fa fa-check">
+            <i style="float:left" class="label @label_class">
                 <lable class="control-label" style="font-size: 13px;font-weight:bolder;"></lable>
             </i>
             Para-Clinical Examinations
@@ -71,5 +77,7 @@
     $(document).ready(function () {
         $('.nav-tabs a[href="' + "#tab-1" + '"]').tab('show');
     });
-
+        //label-primary fa fa-check
+        //label-danger fa fa-window-close
+        //label-warning fa fa-warning
 </script>
