--- a/Reno.MVC/Views/Shared/_Layout.cshtml
+++ b/Reno.MVC/Views/Shared/_Layout.cshtml
@@ -12,10 +12,9 @@
     <link href="~/css/animate.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    
-	<link href="~/lib/datatables/css/datatables.bootstrap4.css" rel="stylesheet" />
 
-	<link href="~/lib/virtual-select/css/virtual-select.min.css" rel="stylesheet" />
+    <link href="~/lib/virtual-select/css/virtual-select.min.css" rel="stylesheet" />
+	<link href="~/lib/datatables/css/datatables.bootstrap4.css" rel="stylesheet" />
 
     @*<link href="~/css/plugins/select2/select2.min.css" rel="stylesheet" />
     <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet" />*@
@@ -120,6 +119,9 @@
     <script src="~/js/app/inspinia.js"></script>
 
 	<script src="~/lib/virtual-select/js/virtual-select.min.js"></script>
+
+	<script src="~/lib/datatables/datatables.min.js"></script>
+    <script src="~/lib/datatables/js/datatables.bootstrap4.min.js"></script>
 
     @*<script src="~/js/plugins/select2/select2.full.min.js"></script>
     <script src="~/js/plugins/dataTables/datatables.min.js"></script>*@
